<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"

        />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Easy"
        android:id="@+id/EasyButton"
        android:layout_below="@+id/textView"
        android:layout_marginTop="49dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Medium"
        android:id="@+id/MediumButton"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/EasyButton"
        android:layout_alignStart="@+id/EasyButton"
        android:layout_alignEnd="@+id/EasyButton" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Hard"
        android:id="@+id/HardButton"
        android:layout_below="@+id/MediumButton"
        android:layout_alignStart="@+id/MediumButton"
        android:layout_marginTop="50dp"
        android:layout_alignEnd="@+id/MediumButton" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/HighScore"
        android:id="@+id/HighScoreButton"
        android:layout_below="@+id/HardButton"
        android:layout_alignStart="@+id/HardButton"
        android:layout_marginTop="50dp"
        android:layout_alignEnd="@+id/HardButton" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/textView2" />
</RelativeLayout>
